--- a/Panda/app/src/main/AndroidManifest.xml
+++ b/Panda/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.panday.MainActivity">
+        <activity android:name="com.example.panday.LoadingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
