--- a/Panda/app/src/main/AndroidManifest.xml
+++ b/Panda/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Panda">
-        <activity android:name="com.example.panda.LoginActivity">
+        <activity android:name=".WriteActivity"></activity>
+        <activity android:name=".MemoInputActivity" />
+        <activity android:name=".MemoActivity" />
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
