--- a/Panda/app/src/main/AndroidManifest.xml
+++ b/Panda/app/src/main/AndroidManifest.xml
@@ -8,12 +8,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Panda">
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".LoadingActivity"></activity>
-        <activity android:name=".DateActivity"></activity>
-        <activity android:name=".WriteActivity">
+        android:supportsRtl="true">
+        <activity android:name=".LoginActivity" android:theme="@style/Theme.Panda"></activity>
+        <activity android:name=".LoadingActivity" android:theme="@style/Theme.Panda"></activity>
+        <activity android:name=".DateActivity" android:theme="@style/Theme.Panda"></activity>
+        <activity android:name=".WriteActivity" android:theme="@style/Theme.Panda">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
