--- a/Panda/app/build.gradle
+++ b/Panda/app/build.gradle
@@ -44,10 +44,15 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.2.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-beta01'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha02'
+    //implementation 'androidx.recyclerview:recyclerview:1.2.0-beta01'
+    //implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha02'
     implementation 'com.google.firebase:firebase-auth:20.0.1'
     implementation 'com.google.firebase:firebase-database:19.6.0'
+
+
+
+
+    implementation 'com.google.android.material:material:1.0.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -55,3 +60,6 @@ dependencies {
 }
 
 apply plugin: 'com.google.gms.google-services'
+
+
+
