--- a/Panda/app/src/main/AndroidManifest.xml
+++ b/Panda/app/src/main/AndroidManifest.xml
@@ -9,8 +9,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Panda">
-        <activity android:name=".WriteActivity"></activity>
-        <activity android:name=".MemoInputActivity" />
+        <receiver android:name=".ListViewWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/list_view_widget_info" />
+        </receiver>
+
+        <service
+            android:name=".MemoRemoteViewsService"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
+        <activity android:name=".WriteActivity" />
         <activity android:name=".MemoActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
