--- a/Panda/app/src/main/AndroidManifest.xml
+++ b/Panda/app/src/main/AndroidManifest.xml
@@ -2,17 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.panda">
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT"/>
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
+        android:largeHeap="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
         <activity android:name=".LoginActivity" android:theme="@style/Theme.Panda"></activity>
-        <activity android:name=".LoadingActivity" android:theme="@style/Theme.Panda"></activity>
+        <activity android:name=".WriteActivity" android:theme="@style/Theme.Panda"></activity>
         <activity android:name=".DateActivity" android:theme="@style/Theme.Panda"></activity>
-        <activity android:name=".WriteActivity" android:theme="@style/Theme.Panda">
+        <activity android:name=".LoadingActivity" android:theme="@style/Theme.Panda">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
