--- a/Panda/app/build.gradle
+++ b/Panda/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     //implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha02'
     implementation 'com.google.firebase:firebase-auth:20.0.1'
     implementation 'com.google.firebase:firebase-database:19.6.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
 
