--- a/Panda/app/src/main/AndroidManifest.xml
+++ b/Panda/app/src/main/AndroidManifest.xml
@@ -9,6 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Panda">
+
+        <service android:name=".MyRemoteViewsService"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.BIND_REMOTEVIEWS"/>
+
         <receiver android:name=".ListViewWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -16,17 +22,21 @@
 
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/list_view_widget_info" />
+                android:resource="@xml/new_app_widget2_info" />
         </receiver>
+        <receiver android:name=".NewAppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
 
-        <service
-            android:name=".MemoRemoteViewsService"
-            android:enabled="true"
-            android:exported="true"
-            android:permission="android.permission.BIND_REMOTEVIEWS" />
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/new_app_widget_info" />
+        </receiver>
 
         <activity android:name=".WriteActivity" />
         <activity android:name=".MemoActivity" />
+        <activity android:name=".ItemClickActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
