--- a/Panda/app/build.gradle
+++ b/Panda/app/build.gradle
@@ -35,20 +35,32 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-core:17.0.0'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
+    implementation 'com.google.firebase:firebase-auth:19.0.0'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-
     implementation platform('com.google.firebase:firebase-bom:26.2.0')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    //implementation 'androidx.recyclerview:recyclerview:1.2.0-beta01'
+    //implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha02'
+    implementation 'com.google.firebase:firebase-auth:20.0.1'
     implementation 'com.google.firebase:firebase-database:19.6.0'
-    implementation 'com.google.firebase:firebase-auth:20.0.2'
-    implementation 'com.google.android.gms:play-services-basement:17.4.0'
-    implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+
+
+
+    implementation 'com.google.android.material:material:1.0.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
+
+
+
