--- a/Panda/app/src/main/AndroidManifest.xml
+++ b/Panda/app/src/main/AndroidManifest.xml
@@ -2,10 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.panda">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/pubao"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Panda">
@@ -24,18 +29,31 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/new_app_widget2_info" />
         </receiver>
-
-
+        
+        <activity android:name=".LoginActivity"/>
         <activity android:name=".WriteActivity" />
         <activity android:name=".MemoActivity" />
+        <activity android:name=".DateActivity"/>
+        <activity android:name=".MakePwActivity"/>
+        <activity android:name=".PwDeleteActivity"/>
+        <activity android:name=".PwEditActivity"/>
         <activity android:name=".ItemClickActivity" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".SettingActivity"/>
+        <activity android:name=".LoadingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <receiver
+            android:name=".AlarmReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+    </application>
 </manifest>
